--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,7 @@ a {
 }
 
 .bg-1 {
-  background-image: url(../images/call-to-action.jpg);
+  background-image: url(/images/call-to-action.jpg);
 }
 
 .bg-dark {
