--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,8 @@ h1 {
 }
 
 h2 {
-  @apply text-4xl;
+  @apply text-[2.5rem];
+  @apply leading-relaxed;
 }
 
 h3 {
@@ -42,7 +43,6 @@ h3 {
 
 h4 {
   @apply text-xl;
-  @apply font-normal;
 }
 
 p {
@@ -53,15 +53,6 @@ ul {
   @apply p-0;
   @apply m-0;
   @apply list-none;
-}
-
-*[id]:before {
-  content: ' ';
-  @apply block;
-  @apply -mt-20;
-  @apply h-20;
-  @apply invisible;
-  @apply hidden;
 }
 
 .heading {
